fix loading alignment

--- a/app/report/loading.module.css
+++ b/app/report/loading.module.css
@@ -1,10 +1,10 @@
 .main {
   display: flex;
   flex-direction: column;
-  min-height: 100dvh;
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  margin-top: 5rem;
   text-align: center;
 }
 
